# BlackCat

./: .gitignore  CLAUDE.md  README.md  et
bins/: Mod-App-2  Mod-App-2_1  Mod-MasterCtrl_SB  Mod-SandBox0  _HTTPSContent.txt  test.txt
bins/Database/: database_0.txt
bins/Logs/: logFile_012024_22_10_56.txt  logFile_012024_22_52_37.txt  logFile_012024_23_01_26.txt  logFile_022024_00_10_22.txt  logFile_032024_21_31_57.txt  logFile_032024_22_02_38.txt  logFile_042024_21_40_14.txt  logFile_042024_21_48_21.txt  logFile_042024_21_57_41.txt  logFile_042024_22_20_51.txt  logFile_042024_22_36_15.txt  logFile_042024_22_41_48.txt  logFile_062024_22_57_57.txt  logFile_062024_23_08_58.txt  logFile_062024_23_36_00.txt  logFile_082024_20_30_44.txt  logFile_082024_21_31_31.txt  logFile_082024_21_53_18.txt  logFile_082024_22_48_32.txt  logFile_082024_22_52_57.txt  logFile_102024_22_10_18.txt  logFile_112024_21_03_32.txt  logFile_112024_23_05_25.txt  logFile_152024_16_11_13.txt  logFile_152024_19_05_58.txt  logFile_152024_19_22_23.txt  logFile_162024_23_55_19.txt  logFile_202024_22_59_48.txt  logFile_282024_20_41_26.txt  logFile_282024_21_42_03.txt  logFile_282024_22_08_31.txt  logFile_282024_22_33_02.txt  logFile_302024_02_53_37.txt
bins/Mod-App-1_UT/: Mod-App-1_UT  _HTTPSContent.txt
bins/Mod-App-X_UT/: _HTTPSContent.txt
bins/Mod-MasterCtrl_SB_UT/: Mod-MasterCtrl_SB_UT_Srv_X
bins/Mod-SandBox0_UT/: Mod-SandBox0_UT_Srv_Tut
makefilesExp/: _Makefile_Old_1  makefile_template
scripts/: polyVisual.sh  tickerParser.sh
src/Mod-1/: Makefile
src/Mod-1/_makefile/: Makefile
src/Mod-1/if/: FactoryIf.h  ServiceBase.h  ServiceIf.h  StockCalcSrvIf.h
src/Mod-1/inc/: Factory.h  FactoryImpl.h  HTTPSProxySrv.h  Service0.h  ServiceBaseDerv.h  StockCalcSrv.h
src/Mod-1/makefile/: Makefile
src/Mod-1/mock/: mockStockCalcSrv.h
src/Mod-1/src/: HTTPSProxySrv.cpp  Service0.cpp  ServiceBaseDerv.cpp  StockCalcSrv.cpp  bcMain.cpp
src/Mod-1/unitTest/: UTStockCalcSrv.cpp  unitTest.cpp
src/Mod-3/: makefile  mod3.cpp  mod3.h
src/Mod-4/: makefile  test
src/Mod-5/: mod5.cpp
src/Mod-7/: Makefile
src/Mod-7/if/: ServiceIf.h
src/Mod-7/inc/: MultiThSrv0.h
src/Mod-7/src/: MultiThSrv0.cpp
src/Mod-App-1/: Makefile  _Makefile
src/Mod-App-1/common/: mainMod-App-1.cpp
src/Mod-App-1/if/: HTTPSProxySrvIf.h  ServiceBase.h
src/Mod-App-1/inc/: FactoryImpl.h  StockCalcSrv.h
src/Mod-App-1/networking/: tempNet.txt
src/Mod-App-1/src/: Service1.cpp  ServiceBaseDerv.cpp
src/Mod-App-1/srcBuild/: Makefile  Mod-App-1.cpp  ServiceX.cpp  _Makefile_Old_2
src/Mod-SandBox/src/: Service0.d  comp0.cpp  main.d
src/Mod-Template/: Makefile_v1
src/Mod-Template-1/: Makefile
src/Mod-Template/inc/: Service0.h
src/Mod-Template/unitTest/: unitTest_Mod-6_0.cpp
sw/: CMakeLists.txt  Dockerfile  Note  VisualStudioSolution_MSVC.bat
sw/Mod-1/: Makefile  mod1.c  mod1.cpp  test.cpp
sw/Mod-1/if/: StockCalcSrvIf.h
sw/Mod-1/inc/: HTTPSProxySrv.h  Service0.h  Service1.h  ServiceBaseDerv.h
sw/Mod-1/mock/: mockService0.h
sw/Mod-1/unitTest/: UTStockCalcSrv.cpp  unitTest.cpp
sw/Mod-2/: makefile  mod2.cpp  mod2.h  test_mod2.cpp
sw/Mod-4/: mod4.cpp  mod4.h  test_mod4.cpp
sw/Mod-5/: Makefile
sw/Mod-6/: Makefile
sw/Mod-App-1/: Makefile  notes
sw/Mod-App-2/: Makefile  notes
sw/Mod-App-2_1/: Makefile
sw/Mod-App-4/: notes
sw/Mod-App-X/: Makefile
sw/Mod-Inv/: Makefile  notes
sw/Mod-Investing/: CMakeLists.txt  Makefile  notes
sw/Mod-Investing/common/: CMakeLists.txt  Database.cpp  Database.h  mainMod-App-1.cpp
sw/Mod-Investing/common/inc/: CommonTypes.h  Log.h
sw/Mod-Investing/common/src/: Database.cpp
sw/Mod-Investing/services/: CMakeLists.txt
sw/Mod-Investing/services/BrokerSrv/: CMakeLists.txt
sw/Mod-Investing/services/BrokerSrv/if/: BrokerSrvIf.h
sw/Mod-Investing/services/BrokerSrv/inc/: BrokerSrv.h
sw/Mod-Investing/services/BrokerSrv/src/: BrokerSrv.cpp
sw/Mod-Investing/services/ClientServerSrv/: CMakeLists.txt
sw/Mod-Investing/services/ClientServerSrv/if/: ClientServerSrvIf.h
sw/Mod-Investing/services/ClientServerSrv/inc/: ClientServerSrv.h
sw/Mod-Investing/services/ClientServerSrv/src/: ClientServerSrv.cpp
sw/Mod-Investing/services/ClientServerSrv/unitTest/: unitTestClientServerSrv.cpp
sw/Mod-Investing/services/Container/: CMakeLists.txt
sw/Mod-Investing/services/Container/if/: ContainerIf.h
sw/Mod-Investing/services/Container/inc/: ObjectsManager.h
sw/Mod-Investing/services/Container/src/: ObjectsManager.cpp
sw/Mod-Investing/services/Container/unitTest/: unitTestContainer.cpp
sw/Mod-Investing/services/DevSrv/: CMakeLists.txt
sw/Mod-Investing/services/DevSrv/if/: InvDevIf.h
sw/Mod-Investing/services/DevSrv/inc/: InvDev0.h
sw/Mod-Investing/services/DevSrv/src/: InvDev0.cpp
sw/Mod-Investing/services/DevSrv/unitTest/: unitTestDevSrv.cpp
sw/Mod-Investing/services/Factory/: CMakeLists.txt
sw/Mod-Investing/services/Factory/inc/: Factory.h
sw/Mod-Investing/services/HTTPSProxy/: CMakeLists.txt
sw/Mod-Investing/services/HTTPSProxy/if/: HTTPSProxySrvIf.h
sw/Mod-Investing/services/HTTPSProxy/inc/: HTTPSProxySrv.h
sw/Mod-Investing/services/HTTPSProxy/src/: HTTPSProxySrv.cpp
sw/Mod-Investing/services/MasterSrv/: CMakeLists.txt
sw/Mod-Investing/services/MasterSrv/if/: MasterSrvIf.h
sw/Mod-Investing/services/MasterSrv/inc/: MasterSrv.h
sw/Mod-Investing/services/MasterSrv/src/: MasterSrv.cpp
sw/Mod-Investing/services/MasterSrv/unitTest/: unitTestMasterSrv.cpp
sw/Mod-Investing/services/Networking/: CMakeLists.txt
sw/Mod-Investing/services/Networking/unitTest/: unitTestNetworking.cpp
sw/Mod-Investing/services/ServiceX/: CMakeLists.txt
sw/Mod-MasterCtrl_SB/: notes
sw/Mod-MasterServer/: Makefile
sw/Mod-SandBox/: Makefile
sw/Mod-SandBox0/: Makefile  Makefile_old
sw/Mod-Template-1/: main.cpp
test_build/: mod2
webdev/dashboard_0/: package-lock.json  package.json
webdev/react_0/: package-lock.json  package.json
(+209 files in other folders)
